# MediaWhisperer

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DESIGN.md  DATABASE_DESIGN.md  NEXT_STEPS.md  PROJECT_PLANS.md  README.md  SETUP.md  install_deps.sh  pyproject.toml  requirements.txt  run_dev.sh  setup.cfg  setup.py
apps/api/: .env  .env.example  README.md  __init__.py  config.py  dependencies.py  main.py  mock_user_database.py
apps/api/database/: init_db.py  models.py  session.py
apps/api/models/: __init__.py  conversation.py  pdf.py  user.py
apps/api/repositories/: base.py  conversation.py  pdf.py  user.py
apps/api/routers/: __init__.py  auth.py  conversation.py  pdf.py
apps/api/services/: conversation_service.py  pdf_service.py
apps/api/utils/: __init__.py  json_parser.py  logger.py  pdf_utils.py  security.py  storage.py
apps/frontend/: .eslintrc.json  README.md  package-lock.json  package.json
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/(auth)/: layout.tsx
apps/frontend/src/app/(dashboard)/: layout.tsx
apps/frontend/src/app/pdf/: page.tsx
apps/frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx  SessionProvider.tsx
apps/frontend/src/components/pdf/: PDFImport.tsx  PDFList.tsx  PDFUpload.tsx  PDFUploadFromUrl.tsx  PDFUrlInput.tsx  index.ts
apps/frontend/src/lib/: api.ts  auth-utils.ts  auth.ts
apps/frontend/src/services/: api-client.ts  conversation-service.ts  index.ts  pdf-service.ts
apps/frontend/src/types/: next-auth.d.ts
mediawhisperer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+9 files in other folders)
